* BUG#8936 Fix imcomplete insurer notice creation
* BUG#8829 Use business kind to search previously generated insurer invoice to prevent mix between insurer invoices and claim insurer invoices

Version 2.0 - 2018-04-13
* FEA#8081 Removing the field 'Waiting Account' on insurers

Version 1.14 - 2017-11-09
* FEA#7353 Add the ability to set up a payment journal for insurers and block define of the payment date if the insurer payment journal is not defined
* BUG#6965 Use _func_key in insurer export / import of waiting account
* BUG#6425 Update link batch select_ids API

Version 1.12 - 2017-04-28
* FEA#0000 Allow to have several waiting accounts for an insurer (one per product for example)
* FEA#0000 Allow to have several waiting accounts for an insurer (one per product for example) to generate several insurer invoices
* FEA#0000 Adding the chain batch

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06

Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29
* FEA#0000 Add test scenario

Version 1.3 - 2015-01-22
* FEA#0000 Module creation